+ adapted + ii imply deterministic; + Cramér

--- a/math/bib.bib
+++ b/math/bib.bib
@@ -63,3 +63,12 @@
 *--------*
 | Papers |
 *--------*
+
+@article{Cramér1938,
+	author = {Cramér, Harald},
+	title = {Sur un nouveau théorème-limite de la théorie des probabilités},
+	year = 1938,
+	journal = {Actualités Scientifiques et Industrielles},
+	language = {French},
+	volume = 736,
+	pages = {5–23}}
