* talk: minor updates

--- a/math/Kuo-integral.bib
+++ b/math/Kuo-integral.bib
@@ -53,6 +53,16 @@
 	doi = {10.31390/cosa.8.1.07},
 	url = {https://digitalcommons.lsu.edu/cosa/vol8/iss1/8}}
 
+@inbook{doi:10.1142/9789814447546_0014,
+	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
+	title = {And isometry formula for a new stochastic integral},
+	booktitle = {Quantum Probability and Related Topics},
+	pages = {222--232},
+	doi = {10.1142/9789814447546_0014},
+	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814447546_0014},
+	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814447546_0014},
+	abstract = {The isometry formula for the Itô integral is generalized to a new stochastic integral involving both adapted and instantly independent stochastic processes. The proof is rather elementary. An example is given to illustrate the isometry formula.}}
+
 @article{KuoPengSzozda2013b,
 	author = {Kuo, Hui-Hsiung and Peng, Yun and Szozda, Benedykt},
 	title = {Generalization of the anticipative Girsanov theorem},
